Update engine and pathfinding for route-based vehicles